Fixing legend view layout issues and bootstrap conflicts

--- a/client/views/legends/legendView.less
+++ b/client/views/legends/legendView.less
@@ -15,7 +15,7 @@
 	top: 0;
 	left: 0;
 	z-index: 1;
-	background: #5ccdde;
+	background: white;
 	height: 100%;
 	width: 100%;
 }
