--- a/client/views/static/home.less
+++ b/client/views/static/home.less
@@ -1696,13 +1696,15 @@ body{
 // }
 
 /* line 23, ../sass/main.sass */
-body {
+#homeBackground {
   background: url(../img/background.jpg) black top center fixed no-repeat;
-      background-size: 150%;
+  background-size: 150%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100%;
+  width: 100%;
 }
 
 /* line 35, ../sass/main.sass */
